# DiscordRedditNotifier

./: .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
config/: config.toml
docs/: configuration.md  watchers.md
notifier-bot/: Dockerfile  bot.py  config.py  post_fetcher.py  post_streamer.py  requirements.txt
